'06-21添加了报修系统的骨架'

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.6.0",
     "postcss-safe-parser": "4.0.1",
+    "rc-form": "^2.4.6",
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^9.0.1",
@@ -82,6 +83,7 @@
   },
   "devDependencies": {
     "babel-plugin-import": "^1.12.0",
+    "node-sass": "^4.12.0",
     "react-router-dom": "^5.0.1"
   },
   "jest": {
